--- a/src/package.json
+++ b/src/package.json
@@ -12,9 +12,11 @@
     "@aws-sdk/client-s3": "^3.758.0",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
+    "hot-shots": "^10.2.1",
     "multer": "^1.4.5-lts.1",
     "mysql2": "^3.12.0",
-    "sequelize": "^6.37.5"
+    "sequelize": "^6.37.5",
+    "winston": "^3.17.0"
   },
   "devDependencies": {
     "jest": "^29.7.0",
