--- a/.github/workflows/packer-build.yml
+++ b/.github/workflows/packer-build.yml
@@ -127,11 +127,11 @@ jobs:
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: ${{ secrets.AWS_REGION }}
 
-      - name: Install and Configure gcloud CLI
-        uses: 'google-github-actions/auth@v2'
-        with:
-          credentials_json: '${{ secrets.GCP_CREDENTIALS_FILE }}'
-          export_default_credentials: true
+      # - name: Install and Configure gcloud CLI
+      #   uses: 'google-github-actions/auth@v2'
+      #   with:
+      #     credentials_json: '${{ secrets.GCP_CREDENTIALS_FILE }}'
+      #     export_default_credentials: true
 
 
       - name: Create webapp.zip from existing directory
@@ -158,16 +158,16 @@ jobs:
         working-directory: ./src/packer
         run: packer build packer.pkr.hcl
 
-      - name: Get Image Name
-        run: |
-          IMAGE_NAME=$(gcloud compute images list --project=${{ secrets.GCP_PROJECT_ID }} --sort-by=~creationTimestamp --limit=1 --format="value(NAME)")
-          echo "IMAGE_NAME=$IMAGE_NAME" >> $GITHUB_ENV
+      # - name: Get Image Name
+      #   run: |
+      #     IMAGE_NAME=$(gcloud compute images list --project=${{ secrets.GCP_PROJECT_ID }} --sort-by=~creationTimestamp --limit=1 --format="value(NAME)")
+      #     echo "IMAGE_NAME=$IMAGE_NAME" >> $GITHUB_ENV
  
-      - name: Share Image with DEMO Project
-        run: |
-          echo "Sharing image $IMAGE_NAME with DEMO project"
-          gcloud compute images add-iam-policy-binding $IMAGE_NAME \
-            --project=${{ secrets.GCP_PROJECT_ID }} \
-            --member="serviceAccount:${{ secrets.GCP_DEMO_PROJECT_NUMBER }}-compute@developer.gserviceaccount.com" \
-            --role=roles/compute.imageUser
+      # - name: Share Image with DEMO Project
+      #   run: |
+      #     echo "Sharing image $IMAGE_NAME with DEMO project"
+      #     gcloud compute images add-iam-policy-binding $IMAGE_NAME \
+      #       --project=${{ secrets.GCP_PROJECT_ID }} \
+      #       --member="serviceAccount:${{ secrets.GCP_DEMO_PROJECT_NUMBER }}-compute@developer.gserviceaccount.com" \
+      #       --role=roles/compute.imageUser
 
