--- a/.github/workflows/packer-status-check.yml
+++ b/.github/workflows/packer-status-check.yml
@@ -51,11 +51,11 @@ jobs:
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: ${{ secrets.AWS_REGION }}
 
-      - name: Install and Configure gcloud CLI
-        uses: 'google-github-actions/auth@v2'
-        with:
-          credentials_json: '${{ secrets.GCP_CREDENTIALS_FILE }}'
-          export_default_credentials: true
+      # - name: Install and Configure gcloud CLI
+      #   uses: 'google-github-actions/auth@v2'
+      #   with:
+      #     credentials_json: '${{ secrets.GCP_CREDENTIALS_FILE }}'
+      #     export_default_credentials: true
 
       - name: Create webapp.zip from existing directory
         run: |
