--- a/src/packer/cloudwatch-config.json
+++ b/src/packer/cloudwatch-config.json
@@ -18,6 +18,7 @@
         "log_stream_name": "cloudwatch_log_stream"
     },
     "metrics":{
+      "namespace": "webapp-metrics",
       "metrics_collected":{
          "statsd":{
             "service_address":":8125",
